--- a/blog/.gitmodules
+++ b/blog/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "libfoo"]
+[submodule "hexo-theme-matery"]
 	path = blog/themes/hexo-theme-matery
 	url = https://github.com/lazyironf4ur/hexo-theme-matery.git
