fix remote_theme some issue: https://stackoverflow.com/questions/70654418/github-pages-build-error-the-jekyll-theme-hydejack-theme-could-not-be-found

--- a/_config.yml
+++ b/_config.yml
@@ -98,6 +98,7 @@ ignore:
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: hexo-theme-matery
+remote_theme: blinkfox/hexo-theme-matery@v2.0.0
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
